/**                                                                               
    **********************************************
    This script was generated automatically by CMMV.
    It is recommended not to modify this file manually, 
    as it may be overwritten by the application.
    **********************************************
**/

syntax = "proto3";
package auth;

message User {
   string username = 1;
   string password = 2;
   string googleId = 3;
   repeated string groups = 4;
   repeated string roles = 5;
   bool root = 6;
}

message UserList {
    repeated User items = 1;
}

message AddUserRequest {
    User item = 1;
}

message AddUserResponse {
    string id = 1;
    User item = 2;
}

message UpdateUserRequest {
    string id = 1;
    User item = 2;
}

message UpdateUserResponse {
    string id = 1;
    User item = 2;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
    int32 affected = 2;
    string id = 3;
}

message GetAllUserRequest {}

message GetAllUserResponse {
    UserList items = 1;
}

message LoginRequest {
   string username = 1;
   string password = 2;
}

message LoginResponse {
   bool success = 1;
   optional string token = 2;
   optional string message = 3;
}

message RegisterRequest {
   string username = 1;
   string email = 2;
   string password = 3;
}

message RegisterResponse {
   bool success = 1;
   optional string message = 2;
}

service UserService {
   rpc AddUser (AddUserRequest) returns (AddUserResponse);
   rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
   rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
   rpc GetAllUser (GetAllUserRequest) returns (GetAllUserResponse);
   rpc Login (LoginRequest) returns (LoginResponse);
   rpc Register (RegisterRequest) returns (RegisterResponse);
}